# JobScraper

./: .gitignore  Cargo.toml  subscribers.json
src/: main.rs
src/config/: iskanjedela.rs  mod.rs
src/controllers/: mod.rs  subscribe.rs  unsubscribe.rs
src/helpers/: data_helper.rs  mod.rs
src/models/: listing.rs  mod.rs  response_iskanjedela.rs
src/scrapers/: mod.rs  scrape.rs  scrape_iskanjedela.rs
